[package]
name = "aingle_raft"
version = "0.5.0"
description = "Raft consensus for AIngle clustering"
license = "Apache-2.0 OR LicenseRef-Commercial"
repository = "https://github.com/ApiliumCode/aingle"
homepage = "https://apilium.com"
documentation = "https://docs.rs/aingle_raft"
authors = ["Apilium Technologies <hello@apilium.com>"]
keywords = ["aingle", "raft", "consensus", "clustering"]
categories = ["database"]
edition = "2021"
rust-version = "1.83"

[dependencies]
openraft = { version = "0.10.0-alpha.17", features = ["serde", "type-alias"] }
aingle_wal = { version = "0.5", path = "../aingle_wal" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
bincode = "2"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.26"
tokio-test = "0.4"
