[package]
name = "aingle_sqlite"
version = "0.0.1"
description = "Abstractions for persistence of AIngle state via SQLite"
license = "Apache-2.0"
homepage = "https://apilium.com"
repository = "https://github.com/ApiliumCode/aingle"
documentation = "https://docs.rs/aingle_sqlite"
authors = ["Apilium Technologies <hello@apilium.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
byteorder = "1.3.4"
cfg-if = "0.1"
chashmap = "2.2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
derive_more = "0.99.3"
either = "1.5.0"
fallible-iterator = "0.3.0"
failure = "0.1.6"
ai_fixt = { version = "^0.0.1", path = "../ai_fixt" }
futures = "0.3.1"
ai_hash = { version = ">=0.0.1", path = "../ai_hash", features = ["rusqlite"] }
aingle_middleware_bytes = "=0.0.3"
aingle_zome_types = { version = ">=0.0.1", path = "../aingle_zome_types" }
kitsune_p2p = { version = "0.0.1", path = "../kitsune_p2p/kitsune_p2p" }
lazy_static = "1.4.0"
once_cell = "1.4.1"
must_future = "0.1.1"
nanoid = "0.4"
num_cpus = "1.13.0"
page_size = "0.4.2"
parking_lot = "0.12"
rand = "0.9"
r2d2 = "0.8"
r2d2_sqlite = "0.18"
rmp-serde = "0.15"
scheduled-thread-pool = "0.2"
serde = "1.0"
serde_derive = "1.0"
shrinkwraprs = "0.3.0"
tempdir = "0.3.7"
thiserror = "2.0"
tokio = { version = "1", features = [ "macros", "rt-multi-thread", "io-util", "sync" ] }
aingle_util = { version = "0.0.1", path = "../aingle_util" }
tracing = "0.1.18"
tracing-futures = "0.2"

rusqlite = { version = "0.25", features = [
  "blob",        # better integration with blob types (Read, Write, etc)
  "backup",
  "trace",
  #"chrono",      # integration with chrono crate
  #"functions",   # rust scalar / agg / window functions
  #"hooks",       # sqlite notification callbacks
  #"serde_json",  # integration with serde_json crate
  #"url",         # integration with url crate
  #"uuid",        # integration with uuid crate
] }

[dev-dependencies]
observability = { version = "0.1", package = "aingle-observability" }

[features]
default = [ "test_utils", "no-deps" ]

test_utils = [ ]

# Use at-rest encryption of databases
db-encryption = ["rusqlite/sqlcipher"]

# Compile SQLite from source rather than depending on a library
no-deps = ['rusqlite/bundled']
