[package]
name = "aingle_state"
version = "0.0.1"
description = "TODO minimize deps"
license = "Apache-2.0"
homepage = "https://apilium.com"
repository = "https://github.com/ApiliumCode/aingle"
documentation = "https://docs.rs/aingle_state"
authors = ["Apilium Technologies <hello@apilium.com>"]
edition = "2018"

[dependencies]
byteorder = "1.3.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
derive_more = "0.99.3"
either = "1.5"
aingle_sqlite = { version = "0.0.1", path = "../aingle_sqlite" }
ai_hash = { version = "^0.0.1", path = "../ai_hash", features = ["full"] }
fallible-iterator = "0.2.0"
aingle_keystore = { version = "0.0.1", path = "../aingle_keystore" }
aingle_middleware_bytes = "=0.0.3"
aingle_p2p = { version = "0.0.1", path = "../aingle_p2p" }
aingle_types = { version = "0.0.1", path = "../aingle_types" }
aingle_util = { version = "0.0.1", path = "../aingle_util" }
aingle_wasm_test_utils = { path = "../test_utils/wasm", optional = true, version = "0.0.1" }
aingle_zome_types = { version = "^0.0.1", path = "../aingle_zome_types", features = [ "full" ] }
kitsune_p2p = { version = "0.0.1", path = "../kitsune_p2p/kitsune_p2p" }
mockall = "0.11"
parking_lot = "0.12"
shrinkwraprs = "0.3.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1.0", features = [ "preserve_order" ] }
thiserror = "2.0"
tokio = { version = "1", features = [ "full" ] }
tracing = "0.1"
tracing-futures = "0.2.4"

tempdir = { version = "0.3", optional = true }
base64 = {version = "0.21", optional = true}

[dev-dependencies]
anyhow = "1.0"
fixt = { version = "^0.0.1", path = "../fixt" }
adk = { version = "^0.0.1", path = "../adk" }
aingle_wasm_test_utils = { path = "../test_utils/wasm", version = "0.0.1" }
matches = "0.1.8"
observability = { version = "0.1", package = "aingle-observability" }
pretty_assertions = "0.7.2"

tempdir = "0.3"

[features]
default = ["test_utils"]

test_utils = [
    "aingle_types/test_utils",
    "aingle_zome_types/test_utils",
    "aingle_wasm_test_utils",
    "tempdir",
    "base64",
]
