[package]
name = "aingle_types"
version = "0.0.1"
description = "AIngle common types"
license = "Apache-2.0"
homepage = "https://apilium.com"
repository = "https://github.com/ApiliumCode/aingle"
documentation = "https://docs.rs/aingle_types"
readme = "README.md"
authors = ["Apilium Technologies <hello@apilium.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
automap = { version = "0.1", features = ["serde"] }
backtrace = "0.3.27"
base64 = "0.21"
cfg-if = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
derive_more = "0.99.3"
either = "1.5"
fixt = { path = "../fixt", version = "0.0.1" }
flate2 = "1.0.14"
futures = "0.3"
ai_hash = { version = "^0.0.1", path = "../ai_hash", features = ["string-encoding"] }
aingle_keystore = { version = "0.0.1", path = "../aingle_keystore" }
aingle_middleware_bytes = "=0.0.3"
aingle_sqlite = { path = "../aingle_sqlite", version = "0.0.1" }
aingle_zome_types = { path = "../aingle_zome_types", version = "0.0.1" }
itertools = { version = "0.10" }
lazy_static = "1.4.0"
mockall = "0.11"
mr_bundle = { path = "../mr_bundle", features = ["packing"], version = "0.0.1" }
must_future = "0.1.1"
nanoid = "0.4"
observability = { version = "0.1", package = "aingle-observability" }
rand = "0.9"
regex = "1.4"
rusqlite = { version = "0.25"}
serde = { version = "1.0", features = [ "derive", "rc" ] }
serde_bytes = "0.11"
serde_derive = "1.0"
serde_yaml = "0.8"
shrinkwraprs = "0.3.0"
strum = "0.26"
strum_macros = "0.26"
tempdir = "0.3.7"
thiserror = "2.0"
tokio = { version = "1", features = [ "rt" ] }
aingle_util = { version = "0.0.1", path = "../aingle_util", features = ["backtrace"] }
tracing = "0.1"
derive_builder = "0.9.0"

arbitrary = { version = "1.0", features = ["derive"], optional = true}

[dev-dependencies]
maplit = "1"
matches = "0.1"
serde_json = "1"
tokio = { version = "1", features = [ "full" ] }

[features]
default = ["fixturators", "test_utils"]
fixturators = ["aingle_zome_types/fixturators"]
test_utils = ["aingle_zome_types/test_utils", "arbitrary", "ai_hash/arbitrary", "mr_bundle/arbitrary"]
