[package]
name = "aingle_util"
version = "0.0.1"
authors = ["Apilium Technologies <hello@apilium.com>"]
edition = "2018"
description = "This crate is a collection of various utility functions that are used in the other crates in the aingle repository."
license = "Apache-2.0"
homepage = "https://apilium.com"
repository = "https://github.com/ApiliumCode/aingle"
documentation = "https://docs.rs/aingle_util"

[dependencies]
once_cell = "1.4"
tokio = { version = "1", features = [ "full" ], optional = true }
num_cpus = "1.8"
futures = "0.3"
backtrace = { version = "0.3", optional = true }
cfg-if = "1.0"
derive_more = "0.99"
dunce = "1.0"

[features]
default = [ "tokio" ]
