[package]
name = "aingle_viz"
version = "0.2.0"
description = "DAG Visualization for AIngle - Web-based graph explorer"
license = "Apache-2.0"
repository = "https://github.com/ApiliumCode/aingle"
homepage = "https://apilium.com"
documentation = "https://docs.rs/aingle_viz"
authors = ["Apilium Technologies <hello@apilium.com>"]
keywords = ["aingle", "visualization", "dag", "graph"]
categories = ["visualization", "web-programming"]
edition = "2021"
rust-version = "1.83"

[features]
default = []

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Graph data
aingle_graph = { version = "0.2", path = "../aingle_graph" }
aingle_minimal = { version = "0.3", path = "../aingle_minimal", default-features = false, features = ["sqlite"] }

# Utilities
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.20", features = ["v4", "serde"] }
thiserror = "2.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "aingle-viz"
path = "src/main.rs"
