[package]
name = "fixt"
version = "0.0.1"
description = "minimum viable fixtures"
license = "Apache-2.0"
homepage = "https://apilium.com"
repository = "https://github.com/ApiliumCode/aingle"
documentation = "https://docs.rs/fixt"
authors = ["Apilium Technologies <hello@apilium.com>"]
keywords = [ "aingle", "ai", "test", "fixture" ]
categories = [ "fixtures" ]
edition = "2018"

[dependencies]
aingle_middleware_bytes = "=0.0.3"
lazy_static = "1.4"
parking_lot = "0.12"
paste = "1.0"
rand = "0.8"
rand_core = "0.6"
serde = { version = "1.0", features = [ "derive" ] }
strum = "0.26"
strum_macros = "0.26"

[features]
fixt = [ ]
